--- a/package.json
+++ b/package.json
@@ -1,6 +1,27 @@
 {
   "dependencies": {
     "express": "^4.17.2",
+    "http": "^0.0.1-security",
+    "init": "^0.1.2",
+    "path": "^0.12.7",
     "socket.io": "^4.4.1"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "chatbox",
+  "version": "1.0.0",
+  "description": "socket chatbox",
+  "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/enugureddy/task1.git"
+  },
+  "author": "reddy",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/enugureddy/task1/issues"
+  },
+  "homepage": "https://github.com/enugureddy/task1#readme",
+  "devDependencies": {}
 }
